--- a/public/style.css
+++ b/public/style.css
@@ -261,8 +261,14 @@ li {
 
   .hub {
     position: static; /* Adjust position */
-    margin-top: 20px; /* Add spacing */
+    margin-top: 0px; /* Add spacing */
+    margin-right: 540px;
     text-align: center; /* Center content */
+  }
+
+  .home-button-leaderboard {
+    position: relative;
+    
   }
 
   h1 {
