--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 body, html {
   height: 100%;
   font-family: 'Times New Roman', Times, serif;
-  background-color: #1e1e1e; /* Dark background color */
+  background-color: #4F2984 ; /* Dark background color */
   color: #fff; /* Light text color */
   margin: 0;
   padding: 0;
@@ -15,14 +15,13 @@ body, html {
 }
 
 .container {
-  display: flex;
+  display: center;
   justify-content: space-between;
-  width: 80%;
-  height: 80%;
-  background-color: #333; /* Dark container background color */
+  width: 100%;
+  height: 70%;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Darker box shadow */
   padding: 20px;
+  margin-top: 100px;
 }
 
 h1 {
