--- a/public/style.css
+++ b/public/style.css
@@ -170,11 +170,11 @@ li {
   border-radius: 5px;
 }
 
-#username-display {
-  position: absolute;
-  top: -100px; /* Adjust the top position as needed */
-  right: -10px;
-}
+/*#username-display {*/
+/*  position: absolute;*/
+/*  top: -100px; /* Adjust the top position as needed */
+/*  right: -10px;*/
+/*}*/
 
 .user-container {
   display: flex;
